# vsc-contract-verifier

./: .dockerignore  .gitignore  .prettierrc.yml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  compose.yml
as-compiler/: .dockerignore  .gitignore  asconfig.json  contract.d.ts  entrypoint.sh  list-exports.js  package.json  pnpm-lock.yaml  tsconfig.json
as_compiler/: .gitignore  Dockerfile  entrypoint.sh  package-template.json
lib/bv_decoder/: Cargo.toml
lib/bv_decoder/src/: lib.rs
lib/ipfs_dag/: Cargo.toml
lib/ipfs_dag/src/: lib.rs
lib/ipfs_dag/test/: build.wasm
lib/sql_minifier/: Cargo.toml
lib/sql_minifier/src/: lib.rs
src/: compiler.rs  config.rs  constants.rs  db.rs  hive_types.rs  main.rs  mongo.rs  server.rs  server_types.rs  vsc_types.rs
src/endpoints/: be_api.rs  cv_api.rs  inference.rs  mod.rs
src/indexer/: blocks.rs  epoch.rs  indexer.rs  mod.rs
src/sql/: create_functions.sql  create_tables.sql
src/types/: hive.rs  mod.rs  server.rs  vsc.rs
