[package]
name = "vsc-contract-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
bollard = "0.18.1"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
derive_more = { version = "1.0.0", features = ["display", "error"] }
env_logger = "0.11.6"
futures-util = "0.3.31"
ipfs_dag = { path = "lib/ipfs_dag" }
lazy_static = "1.5.0"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
semver = "1.0.25"
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
serde_json = "1.0.139"
sql_minifier = { path = "lib/sql_minifier" }
tokio = "1.43.0"
tokio-postgres = { version = "0.7.13", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
] }
toml = "0.8.20"
