[package]
name = "vsc-blocks-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
bv_decoder = { path = "lib/bv_decoder" }
bollard = "0.18.1"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
derive_more = { version = "1.0.0", features = ["display", "error"] }
env_logger = "0.11.6"
futures-util = "0.3.31"
hex = "0.4.3"
ipfs_dag = { path = "lib/ipfs_dag" }
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
log = "0.4.26"
mongodb = "3.2.3"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
semver = "1.0.25"
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
serde_json = "1.0.139"
sha2 = "0.10.8"
sql_minifier = { path = "lib/sql_minifier" }
tokio = "1.43.0"
tokio-postgres = { version = "0.7.13", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
] }
toml = "0.8.20"
